--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "List Page by json config"
   ],
   "author": "rwsbillyang@qq.com",
-  "license": "MIT",
+  "license": "GPL-3.0-only",
   "bugs": {
     "url": "https://github.com/rwsbillyang/f7pro/issues"
   },
